[package]
authors = ["imbolc"]
categories = ["web-programming"]
description = "Cookie manager middleware for tower."
edition = "2018"
homepage = "https://github.com/imbolc/tower-cookies"
keywords = ["axum", "cookie", "cookies", "tower"]
license = "MIT"
name = "tower-cookies"
readme = "README.md"
repository = "https://github.com/imbolc/tower-cookies"
version = "0.2.1"

[features]
default = ["axum"]

[dependencies]
axum = { version = "0.3", optional = true }
cookie = { version = "0.15", features = ["percent-encode"] }
futures-util = "0.3"
http = "0.2"
parking_lot = "0.11"
pin-project-lite = "0.2"
tower-layer = "0.3"
tower-service = "0.3"

[dev-dependencies]
axum = "0.3"
hyper = "0.14"
rusty-hook = "0.11"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tracing-subscriber = "0.2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "counter"
required-features = ["axum"]

[[example]]
name = "hello_world"
required-features = ["axum"]
