[package]
authors = ["imbolc"]
categories = ["web-programming"]
description = "Cookie manager middleware for tower."
edition = "2021"
homepage = "https://github.com/imbolc/tower-cookies"
keywords = ["axum", "cookie", "cookies", "tower"]
license = "MIT"
name = "tower-cookies"
readme = "README.md"
repository = "https://github.com/imbolc/tower-cookies"
version = "0.10.0"

[features]
default = ["axum-core"]
signed = ["cookie/signed"]
private = ["cookie/secure"]

[dependencies]
async-trait = "0.1"
axum-core = { version = "0.4", optional = true }
cookie = { version = "0.18", features = ["percent-encode"] }
futures-util = "0.3"
http = "1.0"
parking_lot = "0.12"
pin-project-lite = "0.2"
tower-layer = "0.3"
tower-service = "0.3"

[dev-dependencies]
axum = "0.7"
hyper = "1"
once_cell = "1.9"
rusty-hook = "0.11"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tracing-subscriber = "0.3"
http-body-util = "0.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "counter"
required-features = ["axum-core"]

[[example]]
name = "hello_world"
required-features = ["axum-core"]

[[example]]
name = "signed_private"
required-features = ["axum-core", "signed", "private"]
